add curl builder

--- a/styles/main.css
+++ b/styles/main.css
@@ -435,3 +435,10 @@ template {
 .clearfix:after {
   clear: both;
 }
+
+.rt-from fieldset {
+  padding: 0;
+}
+.rt-from legend {
+  font-size: 20px;
+}
