--- a/components/g2048/index.less
+++ b/components/g2048/index.less
@@ -1,6 +1,6 @@
 @import url(./fonts/clear-sans.css);
 
-.container {
+.g-container {
   margin: 0;
   padding: 0;
   color: #776e65;
@@ -33,7 +33,7 @@
     background: #bbada0;
     padding: 15px 25px;
     font-size: 25px;
-    height: 25px;
+    height: 55px;
     line-height: 47px;
     font-weight: bold;
     border-radius: 3px;
