--- a/styles/index.less
+++ b/styles/index.less
@@ -12,9 +12,9 @@
 
 .nav {
   .item {
-    border: 1px solid #764abc;
+    border: 1px solid #333;
     border-radius: 3px;
-    color: #764abc;
+    color: #333;
     display: inline-block;
     line-height: 1.2em;
     text-decoration: none !important;
