--- a/styles/index.less
+++ b/styles/index.less
@@ -1,16 +1,14 @@
-.nav li {
-  float: left;
-  padding: 5px 10px;
-  list-style: none;
-}
-
-.nav svg {
-  width: 1em;
-  height: 1em;
-  vertical-align: middle;
-}
-
 .nav {
+  li {
+    float: left;
+    padding: 5px 10px;
+    list-style: none;
+  }
+  svg {
+    width: 1em;
+    height: 1em;
+    vertical-align: middle;
+  }
   .item {
     border: 1px solid #333;
     border-radius: 3px;
