--- a/styles/main.css
+++ b/styles/main.css
@@ -196,6 +196,10 @@ template {
   top: 0;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 .clearfix:before,
 .clearfix:after {
   display: table;
@@ -251,30 +255,8 @@ legend {
   float: left;
 }
 
-.sitemap {
-  margin-top: 30px;
-  background: #f2f2f2;
-  padding: 30px 15px;
-  font-size: 15px;
-  font-family: "Segoe UI", SegoeUI, "Helvetica Neue", Helvetica, Arial,
-    sans-serif;
-}
-
-.sitemap ul > li {
-  list-style: none;
-  float: left;
-  margin-left: 10px;
-}
-
-.sitemap ul > li > span {
-  color: rgb(35, 67, 97);
-}
-.sitemap .item {
-  color: rgb(66, 90, 112);
-  color: #666;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
+@media print {
+  .hidden-print {
+    display: none !important;
+  }
 }
