--- a/components/g2048/index.less
+++ b/components/g2048/index.less
@@ -3,6 +3,8 @@
 .g-container {
   margin: 0;
   padding: 0;
+  width: 500px;
+  height: 674px;
   color: #776e65;
   font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;
   font-size: 18px;
