--- a/components/CrontabInput/crontab-input.less
+++ b/components/CrontabInput/crontab-input.less
@@ -45,6 +45,7 @@
       display: inline-block;
       width: 100px;
       text-align: center;
+      cursor: pointer;
       &.selected {
         font-weight: bold;
         color: @primary;
