--- a/components/ShareButton/style.less
+++ b/components/ShareButton/style.less
@@ -27,13 +27,14 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
-a {
-  position: relative;
-  text-decoration: none;
-  margin: 4px;
-  display: inline-block;
-  outline: none;
+.social-share {
+  a {
+    position: relative;
+    text-decoration: none;
+    margin: 4px;
+    display: inline-block;
+    outline: none;
+  }
 }
 
 .social-share-icon {
